# omega-defi-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: server.py
src/omega_defi_mcp/: __init__.py  analytics.py  arbitrage.py  client.py  memory.py  proxy.py
website/: app.js  index.html  style.css
